@@ -56,6 +56,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- `stockpiles`: fix one-off error in item type when importing furniture stockpile settings
 
 ## Misc Improvements
 - `spectate`: show dwarves' activities (like prayer)
